--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,22 @@
 
 services:
   db:
-    image: postgres:16
-    container_name: veterinaria_pg
+    image: mysql:8.0
+    container_name: pawhospital_mysql
     environment:
-      POSTGRES_USER: app
-      POSTGRES_PASSWORD: apppwd
-      POSTGRES_DB: veterinaria
+      MYSQL_ROOT_PASSWORD: rootpwd
+      MYSQL_DATABASE: pawhospital
+      MYSQL_USER: app
+      MYSQL_PASSWORD: apppwd
     ports:
-      - "5432:5432"
+      - "3306:3306"
+    command:
+      - --default-authentication-plugin=mysql_native_password
+      - --character-set-server=utf8mb4
+      - --collation-server=utf8mb4_unicode_ci
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - db_data:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U app -d veterinaria"]
-      interval: 5s
-      timeout: 5s
-      retries: 10
+
 volumes:
-  pg_data:
+  db_data:
