--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 
-DB_DRIVER=pgsql
+# .env para MySQL
+DB_DRIVER=mysql
 DB_HOST=127.0.0.1
-DB_PORT=5432
-DB_NAME=veterinaria
+DB_PORT=3306
+DB_NAME=pawhospital
 DB_USER=app
 DB_PASS=apppwd
+
