inicializacion del proyecto

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   db:
     image: mysql:8.0
@@ -17,6 +16,14 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./sql:/docker-entrypoint-initdb.d
+
+  web:
+    image: nginx:alpine
+    container_name: pawhospital_nginx
+    ports:
+      - "8080:80"  # Exponemos el puerto 80 del contenedor al puerto 8080 del host
+    volumes:
+      - ./build:/usr/share/nginx/html  # Montamos la carpeta build de React en Nginx
 
 volumes:
   db_data:
