--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,11 +24,13 @@
     "date-fns-tz": "^3.1.3",
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
+    "framer-motion": "^12.23.15",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.2",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1"
   },
